# hockey-tracker

./: .gitignore  Procfile  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
attendance/: admin.py  apps.py  models.py  urls.py  views.py
attendance/migrations/: 0001_initial.py  0002_player_user.py  0003_attendance_presence.py  0004_training_canceled.py  0005_auto_20220415_0054.py  0006_alter_attendance_actual_presence.py  0007_training_deadline.py  0008_alter_player_user.py  0009_fine.py  0010_training_verified.py  0011_alter_attendance_player.py  0012_alter_training_options.py  0013_rename_training_event.py  0014_event_type.py  0015_auto_20230319_1806.py
attendance/templates/: index.html  player.html  players.html  trainings.html
cssbuild/: package-lock.json  package.json  tailwind.config.js
cssbuild/css/: tailwind.css
static/attendance/: style.css
templates/: base_generic.html  index.html  player.html  register.html  training.html
templates/attendance/: event_detail.html  event_list.html  event_verify.html  player_detail.html  player_list.html  training_detail.html  training_list.html  training_verify.html
templates/registration/: login.html  register.html
tracker/: settings.py  urls.py  views.py
