[tool.poetry]
name = "hockey-tracker"
version = "0.1.0"
description = "Attendance registration for training and games."
authors = ["Jeroen van Riel <jeroenvanriel@outlook.com>"]
packages = [{include = "tracker"}]

[tool.poetry.dependencies]
python = "^3.7"
django = "<4"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
django-livereload-server = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
